kub/movie-service/movie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: hryla007/movieservice
          ports:
            - containerPort: 8000
