kub/movie-service/movie-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db
  namespace: dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: movie-db
  clusterIP: None
