kub/movie-service/movie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: dev
spec:
  selector:
    app: movie-service
  ports:
    - port: 80
      targetPort: 8000
